--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-patterns-in-ts",
+  "name": "dsa-in-ts",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
